Update index heading to Explainability

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
     <h1 class="text-6xl md:text-7xl font-extrabold mb-8 uppercase leading-tight">
         <span class="gradient-text uppercase">
-            Explainable AI for Credit Card Default Risk Prediction
+            Explainability for Credit Card Default Risk Prediction
         </span>
     </h1>
     <p class="text-slate-400 max-w-3xl mx-auto italic text-lg leading-relaxed border-l-2 border-blue-500/30 pl-6 text-left">
